enable the refreshing of score history table once the game is finished
